[package]
name = "pallet-block-rewards"
version = "0.1.0"
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Block Rewards pallet"
edition = "2021"
homepage = "https://centrifuge.io"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-primitives = { path = "../../libs/primitives", default-features = false }
cfg-traits = { path = "../../libs/traits", default-features = false }
cfg-types = { path = "../../libs/types", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { version = "0.4.17", default-features = false }
num-traits = { version = "0.2", default-features = false }
pallet-collator-selection = { workspace = true }
pallet-session = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

# optional dependencies for benchmarking
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
pallet-balances = { workspace = true }
pallet-restricted-tokens = { path = "../restricted-tokens", default-features = false }
pallet-rewards = { path = "../rewards", default-features = false }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-benchmarking/std",
  "num-traits/std",
  "scale-info/std",
  "cfg-primitives/std",
  "cfg-traits/std",
  "cfg-types/std",
  "parity-scale-codec/std",
  "log/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-collator-selection/std",
  "pallet-rewards/std",
  "pallet-session/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "cfg-types/try-runtime",
  "frame-system/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-session/try-runtime",
  "sp-runtime/try-runtime",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
]
