[package]
name = "pallet-block-rewards"
description = "Block Rewards pallet"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-primitives = { workspace = true }
cfg-traits = { workspace = true }
cfg-types = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pallet-collator-selection = { workspace = true }
pallet-session = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

# optional dependencies for benchmarking
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
orml-tokens = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-restricted-tokens = { workspace = true, default-features = true }
pallet-rewards = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "frame-benchmarking/std",
  "num-traits/std",
  "scale-info/std",
  "cfg-primitives/std",
  "cfg-traits/std",
  "cfg-types/std",
  "parity-scale-codec/std",
  "log/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-collator-selection/std",
  "pallet-rewards/std",
  "pallet-session/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "cfg-types/try-runtime",
  "frame-system/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-session/try-runtime",
  "sp-runtime/try-runtime",
]
