[package]
authors = ['buterajay@protonmail.com']
description = 'Access control list for bridge paths across chains'
edition = '2021'
license = "LGPL-3.0"
name = 'pallet-bridge-mapping'
repository = "https://github.com/centrifuge/centrifuge-chain/pallets/bridge-mapping"
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', features = ['derive'] , default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.26" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.26" }
pallet-nft = { path = "../nft", default-features = false }

[dev-dependencies]
chainbridge = { git = "https://github.com/centrifuge/chainbridge-substrate.git", default-features = true, branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = true , branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = true , branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = true , branch = "polkadot-v0.9.26" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = true , branch = "polkadot-v0.9.26" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = true , branch = "polkadot-v0.9.26" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = true , branch = "polkadot-v0.9.26" }
pallet-anchors = { path = "../anchors", default-features = true }
cfg-types = { path = "../../libs/types", default-features = true}
cfg-traits = { path = "../../libs/traits", default-features = true }
cfg-primitives = { path = "../../libs/primitives", default-features = true}


[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-nft/std',
]

