[package]
authors = ["buterajay@protonmail.com"]
description = "Access control list for bridge paths across chains"
edition = "2021"
license = "LGPL-3.0"
name = "pallet-bridge-mapping"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cfg-primitives = { path = "../../libs/primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
]
try-runtime = ["frame-support/try-runtime"]
