[package]
name = "pallet-bridge"
description = "Bridge pallet"
authors = ["The Centrifugians Tribe"]
edition = "2021"
homepage = "https://centrifuge.io"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

cfg-traits = { path = "../../libs/traits", default-features = false }
chainbridge = { workspace = true }

[dev-dependencies]
cfg-primitives = { path = "../../libs/primitives" }
cfg-types = { path = "../../libs/types" }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-fees = { path = "../fees" }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "chainbridge/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "chainbridge/std",
  "cfg-traits/std",
]
try-runtime = [
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "chainbridge/try-runtime",
  "cfg-types/try-runtime",
  "cfg-primitives/try-runtime",
  "frame-system/try-runtime",
]
