[package]
name = "pallet-bridge"
description = "Bridge pallet"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

cfg-traits = { workspace = true }
chainbridge = { workspace = true }

[dev-dependencies]
cfg-primitives = { workspace = true, default-features = true }
cfg-types = { workspace = true, default-features = true }
pallet-authorship = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-fees = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "chainbridge/std",
  "cfg-traits/std",
]
runtime-benchmarks = [
  "sp-runtime/runtime-benchmarks",
  "chainbridge/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
try-runtime = [
  "sp-runtime/try-runtime",
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "chainbridge/try-runtime",
  "cfg-types/try-runtime",
  "cfg-primitives/try-runtime",
  "frame-system/try-runtime",
]
