[package]
authors = ['Centrifuge GmbH']
description = 'The reward pallet that rewards contributors in bids for parachain slots for the centrifuge chain.'
edition = '2018'
license = "LGPL-3.0"
name = 'cf-reward'
repository = "https://github.com/centrifuge/centrifuge-chain/pallets/cf-reward"
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-vesting = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git", default-features = false }
crowdloan-claim = { path = "../../pallets/crowdloan-claim", default-features = false }

[dev-dependencies]
sp-core = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-io = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'crowdloan-claim/std'
]
