[package]
name = 'pallet-claims'
description = 'Pallet for processing token claims for Tinlake investments.'
authors = ['The Centrifugians Tribe']
edition = '2021'
homepage = 'https://centrifuge.io'
license = "LGPL-3.0"
repository = 'https://github.com/centrifuge/centrifuge-chain'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
cfg-types = { path= '../../libs/types', default_features = true }
cfg-primitives = { path= '../../libs/primitives', default_features = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
node-primitives = { git = "https://github.com/paritytech/substrate",  default-features = false , branch = "polkadot-v0.9.29" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }

# optional dependencies for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate",  default-features = false , optional = true , branch = "polkadot-v0.9.29" }

[dev-dependencies]
node-primitives = { git = "https://github.com/paritytech/substrate",  default-features = false , branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false  , branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }


[features]
default = ['std']
std = [
  'codec/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'sp-std/std',
  'sp-core/std',
  'sp-std/std',
]

try-runtime = ["frame-support/try-runtime"]
